--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,6 @@ services:
         condition: service_healthy
     ports:
       - "8080:8080"
-    environment:
-      MYSQL_HOST: mysql
-      MYSQL_PORT: 3306
-      MYSQL_USER: root
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      REDIS_PASSWORD: ${REDIS_PASSWORD}
     networks:
       - lanmei-network
 
@@ -82,6 +73,8 @@ services:
       # 适度减少并行度，避免吃满内存
       - QDRANT__SERVICE__GRPC_TIMEOUT_SEC=30
     # === 可选：给容器设定内存上限，防止同机其他服务被挤爆 ===
+    networks:
+      - lanmei-network
     deploy:
       resources:
         limits:
